Fix non-visible container left margin with menu

--- a/static/style.css
+++ b/static/style.css
@@ -160,6 +160,9 @@ body {
     display: block;
   }
 }
+.container-right {
+  padding-left: 300px;
+}
 body {
   margin: 0px;
   padding: 0px;
